added base index template with jade. added canvas.jsx updated dependencies

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -5858,9 +5858,118 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+/*body {
+  background: #ffffff;
+}
 
-a {
-  color: #00B7FF; }
+
+
+
+.navbar, .navbar-default {
+  font-family: 'Hind', sans-serif;
+  margin-bottom:0;
+  background:#373737;
+  border:0;
+  border-radius:0px;
+}
+
+.nav-link {
+  -webkit-transition: background .5s ease-out;
+  -moz-transition: background .5s ease-out;
+  -ms-transition: background .5s ease-out;
+  -o-transition: background .5s ease-out;
+  transition: background .5s ease-out;
+  background:#373737;
+}
+
+.nav-link:hover {
+  -webkit-transition: background .5s ease;
+  -moz-transition: background .5s ease;
+  -ms-transition: background .5s ease;
+  -o-transition: background .5s ease;
+  transition: background .5s ease;
+  background:#14a1ff;
+}
+
+.navbar-nav>li>a {
+  text-shadow:none;
+  color:#ffffff !important;
+  font-weight:500;
+  font-size:16px;
+  height:53px;
+  text-align:center;
+}
+
+@media (max-width: 767px) {
+  .navbar-nav>li>a  {
+    line-height:33px;
+  }
+}
+
+
+
+
+
+
+
+canvas {
+  margin-top:100px;
+}*/
+.navbar-default .navbar-nav > li > a:hover {
+  color: #39d1b4; }
+
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none; }
+
+.navbar .navbar-collapse {
+  text-align: center; }
+
+.logo {
+  height: 40px;
+  margin-top: -9px; }
+
+@media (min-width: 768px) {
+  .navbar-right {
+    margin-top: 4px; } }
+
+@media (min-width: 768px) {
+  .navbar-right > li > a {
+    height: 35px; } }
+
+@media (min-width: 768px) {
+  #steam {
+    color: #39d1b4;
+    font-weight: 700;
+    position: relative;
+    bottom: 5px;
+    right: 2px;
+    margin-top: 5px;
+    padding-bottom: 5px;
+    padding-top: 6px;
+    background: #ffffff;
+    border: 2px solid #39d1b4;
+    border-radius: 5px;
+    font-size: 13px;
+    -webkit-transition: 200ms ease-in-out;
+    -moz-transition: 200ms ease-in-out;
+    -ms-transition: 200ms ease-in-out;
+    -o-transition: 200ms ease-in-out;
+    transition: 200ms ease-in-out; } }
+
+@media (min-width: 768px) {
+  #steam:hover {
+    color: #ffffff;
+    background: #39d1b4; } }
+
+i {
+  margin-right: 5px; }
+
+canvas {
+  border-radius: 120px; }
+
+#pbar-container {
+  width: 98%; }
+
+#center-nav {
+  font-size: 14px; }
