--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,32 @@
 extends layout
 
 block content
+  nav.navbar.navbar-default
+    .container-fluid
+      .navbar-header
+        button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1")
+          span.sr-only Toggle Navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href="/")
+          img.logo(src="/images/logo.png")
+      .collapse.navbar-collapse#bs-example-navbar-collapse-1
+        ul.nav.navbar-nav#center-nav
+          li.nav-link: a(href="3") Link
+          li.nav-link: a(href="3") Another Link
+          li.nav-link: a(href="3") And Another
+        ul.nav.navbar-nav.navbar-right
+          li: a#steam(href="#")
+            i.fa.fa-steam
+            |Sign in through Steam
+
+  .container#pbar-container
+    .row
+      .col-md-12
+        canvas#canvas(width="1820" height="100")
+        p#numSkins 0 skins deposited
+
+
   #example
 
