--- a/views/index.jade
+++ b/views/index.jade
@@ -17,7 +17,7 @@ block content
           li.nav-link: a(href="3") Another Link
           li.nav-link: a(href="3") And Another
         ul.nav.navbar-nav.navbar-right
-          li: a#steam(href="#")
+          li: a#steam(href="/auth/steam")
             i.fa.fa-steam
             |Sign in through Steam
 
