RoundBox.jsx added. basic GET for rounds defined

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,9 +13,9 @@ block content
           img.logo(src="/images/logo.png")
       .collapse.navbar-collapse#bs-example-navbar-collapse-1
         ul.nav.navbar-nav#center-nav
-          li.nav-link: a(href="3") Link
-          li.nav-link: a(href="3") Another Link
-          li.nav-link: a(href="3") And Another
+          li.nav-link: a(href="#") Link
+          li.nav-link: a(href="#") Another Link
+          li.nav-link: a(href="#") And Another
         ul.nav.navbar-nav.navbar-right
           if !user
             li
@@ -35,5 +35,6 @@ block content
         canvas#canvas(width="1820" height="100")
         p#numSkins 0 skins deposited
 
+  #main
   #example
 
