--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     title= title
     // Google Fonts
-    // link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Hind:600,700,400,500')
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Hind:600,700,400,500')
     // Bootstrap theme
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.4/simplex/bootstrap.min.css')
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css')
