reformatted User component inheritance

--- a/views/index.jade
+++ b/views/index.jade
@@ -27,6 +27,7 @@ block content
               a#steam(href="#")
                 img(src="#{user.photos[0].value}")
                 |#{user.displayName}
+                #user
 
 
   .container#pbar-container
