--- a/views/index.jade
+++ b/views/index.jade
@@ -13,7 +13,7 @@ block content
           img.logo(src="/images/logo.png")
       .collapse.navbar-collapse#bs-example-navbar-collapse-1
         ul.nav.navbar-nav#center-nav
-          li.nav-link: a(href="#") Link
+          li: button.btn.btn-default.btn-raised: a(href="#") Link
           li.nav-link: a(href="#") Another Link
           li.nav-link: a(href="#") And Another
         ul.nav.navbar-nav.navbar-right
