added reacttransition for initial rounds render

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -79326,3 +79326,10 @@ canvas {
 
 #center-nav {
   font-size: 14px; }
+
+.example-appear {
+  opacity: 0.01;
+  transition: opacity 0.5s ease-in; }
+
+.example-appear.example-appear-active {
+  opacity: 1; }
