changed user_data to user_id, modified template to filter error

--- a/views/index.jade
+++ b/views/index.jade
@@ -40,5 +40,7 @@ block content
 
   if user
     script.
-      var user_data = !{JSON.parse(user.id)}
+      if(user.id) {
+        var user_id = !{JSON.parse(user.id)}
+      }
 
