--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -5858,125 +5858,237 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
-/*body {
+/* perfect-scrollbar v0.6.2 */
+.ps-container {
+  overflow: hidden !important; }
+
+.ps-container.ps-active-x > .ps-scrollbar-x-rail, .ps-container.ps-active-y > .ps-scrollbar-y-rail {
+  display: block; }
+
+.ps-container.ps-in-scrolling {
+  pointer-events: none; }
+
+.ps-container.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail {
+  background-color: #eee;
+  opacity: 0.9; }
+
+.ps-container.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail > .ps-scrollbar-x {
+  background-color: #999; }
+
+.ps-container.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail {
+  background-color: #eee;
+  opacity: 0.9; }
+
+.ps-container.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail > .ps-scrollbar-y {
+  background-color: #999; }
+
+.ps-container > .ps-scrollbar-x-rail {
+  display: none;
+  position: absolute;
+  /* please don't change 'position' */
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  opacity: 0;
+  -webkit-transition: background-color 0.2s linear, opacity 0.2s linear;
+  -moz-transition: background-color 0.2s linear, opacity 0.2s linear;
+  -o-transition: background-color 0.2s linear, opacity 0.2s linear;
+  transition: background-color 0.2s linear, opacity 0.2s linear;
+  bottom: 3px;
+  /* there must be 'bottom' for ps-scrollbar-x-rail */
+  height: 8px; }
+
+.ps-container > .ps-scrollbar-x-rail > .ps-scrollbar-x {
+  position: absolute;
+  /* please don't change 'position' */
+  background-color: #aaa;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-transition: background-color 0.2s linear;
+  -moz-transition: background-color 0.2s linear;
+  -o-transition: background-color 0.2s linear;
+  transition: background-color 0.2s linear;
+  bottom: 0;
+  /* there must be 'bottom' for ps-scrollbar-x */
+  height: 8px; }
+
+.ps-container > .ps-scrollbar-y-rail {
+  display: none;
+  position: absolute;
+  /* please don't change 'position' */
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  opacity: 0;
+  -webkit-transition: background-color 0.2s linear, opacity 0.2s linear;
+  -moz-transition: background-color 0.2s linear, opacity 0.2s linear;
+  -o-transition: background-color 0.2s linear, opacity 0.2s linear;
+  transition: background-color 0.2s linear, opacity 0.2s linear;
+  right: 3px;
+  /* there must be 'right' for ps-scrollbar-y-rail */
+  width: 8px; }
+
+.ps-container > .ps-scrollbar-y-rail > .ps-scrollbar-y {
+  position: absolute;
+  /* please don't change 'position' */
+  background-color: #aaa;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-transition: background-color 0.2s linear;
+  -moz-transition: background-color 0.2s linear;
+  -o-transition: background-color 0.2s linear;
+  transition: background-color 0.2s linear;
+  right: 0;
+  /* there must be 'right' for ps-scrollbar-y */
+  width: 8px; }
+
+.ps-container:hover.ps-in-scrolling {
+  pointer-events: none; }
+
+.ps-container:hover.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail {
+  background-color: #eee;
+  opacity: 0.9; }
+
+.ps-container:hover.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail > .ps-scrollbar-x {
+  background-color: #999; }
+
+.ps-container:hover.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail {
+  background-color: #eee;
+  opacity: 0.9; }
+
+.ps-container:hover.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail > .ps-scrollbar-y {
+  background-color: #999; }
+
+.ps-container:hover > .ps-scrollbar-x-rail, .ps-container:hover > .ps-scrollbar-y-rail {
+  opacity: 0.6; }
+
+.ps-container:hover > .ps-scrollbar-x-rail:hover {
+  background-color: #eee;
+  opacity: 0.9; }
+
+.ps-container:hover > .ps-scrollbar-x-rail:hover > .ps-scrollbar-x {
+  background-color: #999; }
+
+.ps-container:hover > .ps-scrollbar-y-rail:hover {
+  background-color: #eee;
+  opacity: 0.9; }
+
+.ps-container:hover > .ps-scrollbar-y-rail:hover > .ps-scrollbar-y {
+  background-color: #999; }
+
+@media (min-width: 768px) {
+  .nav-link, .nav-link > a {
+    height: 100% !important; } }
+
+#nav {
   background: #ffffff;
-}
+  margin-bottom: 30px; }
 
+.nav-link > a {
+  font-size: 17px;
+  color: #34495e !important;
+  webkit-transition: .30s ease-in-out;
+  transition: .30s ease-in-out; }
 
-
-
-.navbar, .navbar-default {
-  font-family: 'Hind', sans-serif;
-  margin-bottom:0;
-  background:#373737;
-  border:0;
-  border-radius:0px;
-}
-
-.nav-link {
-  -webkit-transition: background .5s ease-out;
-  -moz-transition: background .5s ease-out;
-  -ms-transition: background .5s ease-out;
-  -o-transition: background .5s ease-out;
-  transition: background .5s ease-out;
-  background:#373737;
-}
-
-.nav-link:hover {
-  -webkit-transition: background .5s ease;
-  -moz-transition: background .5s ease;
-  -ms-transition: background .5s ease;
-  -o-transition: background .5s ease;
-  transition: background .5s ease;
-  background:#14a1ff;
-}
-
-.navbar-nav>li>a {
-  text-shadow:none;
-  color:#ffffff !important;
-  font-weight:500;
-  font-size:16px;
-  height:53px;
-  text-align:center;
-}
-
-@media (max-width: 767px) {
-  .navbar-nav>li>a  {
-    line-height:33px;
-  }
-}
-
-
-
-
-
-
-
-canvas {
-  margin-top:100px;
-}*/
-.navbar-default .navbar-nav > li > a:hover {
-  color: #39d1b4; }
-
-.navbar .navbar-nav {
-  display: inline-block;
-  float: none; }
+.nav-link > a:hover {
+  color: #39D1B4 !important; }
 
 .navbar .navbar-collapse {
   text-align: center; }
 
-.logo {
-  height: 40px;
-  margin-top: -9px; }
-
-@media (min-width: 768px) {
-  .navbar-right {
-    margin-top: 4px; } }
+#brand {
+  font-size: 35px;
+  color: #34495e; }
 
 @media (min-width: 768px) {
   .navbar-right > li > a {
-    height: 35px; } }
-
-@media (min-width: 768px) {
-  #steam {
-    color: #39d1b4;
-    font-weight: 700;
-    position: relative;
-    bottom: 5px;
-    right: 2px;
-    margin-top: 5px;
-    padding-bottom: 5px;
-    padding-top: 6px;
-    background: #ffffff;
-    border: 2px solid #39d1b4;
-    border-radius: 5px;
-    font-size: 13px;
-    -webkit-transition: 200ms ease-in-out;
-    -moz-transition: 200ms ease-in-out;
-    -ms-transition: 200ms ease-in-out;
-    -o-transition: 200ms ease-in-out;
-    transition: 200ms ease-in-out; } }
-
-@media (min-width: 768px) {
-  #steam:hover {
-    color: #ffffff;
-    background: #39d1b4; } }
+    height: 45px; } }
 
 i {
   margin-right: 5px; }
 
 canvas {
-  border-radius: 120px; }
+  border-radius: 120px;
+  margin-bottom: 25px;
+  margin-top: 5px; }
 
-#pbar-container {
-  width: 98%; }
+#page-container {
+  width: 100%; }
 
 #center-nav {
-  font-size: 14px; }
+  font-size: 16px; }
 
-.example-appear {
-  opacity: 0.01;
-  transition: opacity 0.5s ease-in; }
+.skin-image {
+  width: 150px;
+  height: 150px;
+  margin: -20px 30px 0 30px; }
 
-.example-appear.example-appear-active {
-  opacity: 1; }
+.skin-name {
+  text-align: center;
+  margin-top: 0; }
+
+.deposited-picture {
+  float: left; }
+
+.row-picture, .row-picture > .circle {
+  width: 45px !important;
+  height: 45px !important; }
+
+.row-picture {
+  padding-right: 0px !important;
+  margin-right: 16px; }
+
+.row-content {
+  min-height: 45px !important; }
+
+.list-group-item-heading {
+  vertical-align: middle;
+  line-height: 25px !important;
+  margin-top: 10px; }
+
+#game-panel {
+  max-height: 650px;
+  overflow: auto; }
+
+#game-panel > .panel-heading {
+  background: #2dbfa2; }
+
+#pbar-info {
+  color: #14A1FF;
+  text-align: center; }
+
+#num-skins {
+  font-size: 100px; }
+
+#skins-word {
+  font-size: 50px; }
+
+@media (max-width: 767px) {
+  #skin-panel {
+    width: 100%; } }
+
+.username-bold {
+  font-weight: bold; }
+
+button {
+  color: #000; }
+
+#skin-panel-body {
+  padding: 0 15px;
+  display: flex;
+  overflow: auto; }
+
+.transform-col {
+  animation: pagesnap 1.5s 1; }
+
+@keyframes pagesnap {
+  0% {
+    transform: translateY(1080px); }
+  100% {
+    transform: translateY(0px); } }
