--- a/public/stylesheets/scss/style.scss
+++ b/public/stylesheets/scss/style.scss
@@ -1,126 +1,48 @@
 @import "../../libraries/bootstrap-sass-official/assets/stylesheets/bootstrap";
+@import "../../libraries/perfect-scrollbar/css/perfect-scrollbar";
 
 
+$blue-black:#34495e;
+$light-green:#39D1B4;
+$dark-green:#2dbfa2;
 
-/*body {
-  background: #ffffff;
+@media (min-width: 768px) {
+  .nav-link, .nav-link>a {
+  height:100%!important;
+}
 }
 
-
-
-
-.navbar, .navbar-default {
-  font-family: 'Hind', sans-serif;
-  margin-bottom:0;
-  background:#373737;
-  border:0;
-  border-radius:0px;
+#nav {
+  background:#ffffff;
+  margin-bottom:30px;
 }
 
-.nav-link {
-  -webkit-transition: background .5s ease-out;
-  -moz-transition: background .5s ease-out;
-  -ms-transition: background .5s ease-out;
-  -o-transition: background .5s ease-out;
-  transition: background .5s ease-out;
-  background:#373737;
-}
-
-.nav-link:hover {
-  -webkit-transition: background .5s ease;
-  -moz-transition: background .5s ease;
-  -ms-transition: background .5s ease;
-  -o-transition: background .5s ease;
-  transition: background .5s ease;
-  background:#14a1ff;
-}
-
-.navbar-nav>li>a {
-  text-shadow:none;
-  color:#ffffff !important;
-  font-weight:500;
-  font-size:16px;
-  height:53px;
-  text-align:center;
-}
-
-@media (max-width: 767px) {
-  .navbar-nav>li>a  {
-    line-height:33px;
+.nav-link>a {
+    font-size:17px;
+    color:$blue-black!important;
+    webkit-transition:.30s ease-in-out;
+    transition:.30s ease-in-out;
   }
-}
 
-
-
-
-
-
-
-canvas {
-  margin-top:100px;
-}*/
-
-
-.navbar-default .navbar-nav>li>a:hover {
-  color:#39d1b4;
-}
-
-.navbar .navbar-nav {
-  display: inline-block;
-  float: none;
+.nav-link>a:hover {
+  color:$light-green!important;
 }
 
 .navbar .navbar-collapse {
-  text-align: center;
+    text-align: center;
 }
 
-.logo {
-  height:40px;
-  margin-top:-9px;
+#brand {
+  font-size:35px;
+  color:$blue-black;
 }
 
 
-
-@media (min-width: 768px) {
-  .navbar-right {
-    margin-top:4px;
-  }
-}
 
 @media (min-width: 768px) {
   .navbar-right>li>a {
-    height:35px;
-  }
+  height:45px;
 }
-
-@media (min-width: 768px) {
-  #steam {
-    color:#39d1b4;
-    font-weight:700;
-    position:relative;
-    bottom:5px;
-    right:2px;
-    margin-top:5px;
-    padding-bottom:5px;
-    padding-top:6px;
-    background:#ffffff;
-    border:2px solid #39d1b4;
-    border-radius:5px;
-    font-size:13px;
-    -webkit-transition:200ms ease-in-out;
-    -moz-transition:200ms ease-in-out;
-    -ms-transition:200ms ease-in-out;
-    -o-transition:200ms ease-in-out;
-    transition:200ms ease-in-out;
-  }
-}
-
-
-@media (min-width: 768px) {
-  #steam:hover {
-    color:#ffffff;
-    background:#39d1b4;
-  }
 }
 
 i {
@@ -129,21 +51,103 @@ i {
 
 canvas {
   border-radius:120px;
+  margin-bottom:25px;
+  margin-top:5px;
 }
 
-#pbar-container {
-  width:98%;
+#page-container {
+  width:100%;
 }
 
 #center-nav {
-  font-size:14px;
+  font-size:16px;
 }
 
-.example-appear {
-  opacity: 0.01;
-  transition: opacity .5s ease-in;
+.skin-image {
+  width:150px;
+  height:150px;
+  margin:-20px 30px 0 30px;
 }
 
-.example-appear.example-appear-active {
-  opacity: 1;
+.skin-name {
+  text-align: center;
+  margin-top:0;
+}
+
+.deposited-picture {
+  float:left;
+}
+
+.row-picture, .row-picture>.circle {
+  width:45px!important;
+  height:45px!important;
+}
+
+.row-picture {
+  padding-right:0px!important;
+  margin-right:16px;
+}
+
+.row-content {
+  min-height:45px!important;
+}
+
+.list-group-item-heading {
+  vertical-align:middle;
+  line-height:25px!important;
+  margin-top:10px;
+}
+
+#game-panel {
+  max-height:650px;
+  overflow:auto;
+}
+
+#game-panel>.panel-heading {
+  background:$dark-green;
+}
+
+#pbar-info {
+  color:#14A1FF;
+  text-align:center;
+}
+#num-skins {
+  font-size:100px;
+}
+
+#skins-word {
+  font-size:50px;
+}
+
+@media (max-width: 767px) {
+  #skin-panel {
+    width:100%;
+  }
+}
+
+.username-bold {
+  font-weight:bold;
+}
+
+button {
+  color:#000;
+}
+
+#skin-panel-body {
+  padding:0 15px;
+  display:flex;
+  overflow:auto;
+}
+
+.transform-col {
+  animation:pagesnap 1.5s 1;
+}
+
+@keyframes pagesnap {
+  0% {
+    transform:translateY(1080px);
+  }
+  100% {
+    transform:translateY(0px);
+  }
 }
