--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  nav.navbar.navbar-default
+  nav.navbar.navbar-default#nav
     .container-fluid
       .navbar-header
         button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1")
@@ -9,32 +9,23 @@ block content
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href="/")
-          img.logo(src="/images/logo.png")
+        a.navbar-brand#brand(href="/")
+          |CS:GO Website
       .collapse.navbar-collapse#bs-example-navbar-collapse-1
-        ul.nav.navbar-nav#center-nav
-          li.nav-link: a(href="#") Link
-          li.nav-link: a(href="#") Another Link
-          li.nav-link: a(href="#") And Another
         ul.nav.navbar-nav.navbar-right
+          li.nav-link: a(href="#") Home
+          li.nav-link: a(href="#") About
+          li.nav-link: a(href="#") FAQ
           if !user
-            li
+            li.nav-link
               a#steam(href="/auth/steam")
                 i.fa.fa-steam
                 |Sign in through Steam
           else
-            li
+            li.nav-link
               a#steam(target = "_blank" href="https://steamcommunity.com/tradeoffer/new/?partner=273281604&token=pkDxy0cw")
                 img(src="#{user.photos[0].value}")
                 |#{user.displayName}
-                #user
-
-
-  .container#pbar-container
-    .row
-      .col-md-12
-        canvas#canvas(width="1820" height="100")
-        p#numSkins 0 skins deposited
 
   #main
 
