--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,3 +17,5 @@ html
     script(src='/javascripts/build/app.js')
     script(src='/libraries/bootstrap-material-design/dist/js/material.min.js')
     script(src='/libraries/bootstrap-material-design/dist/js/ripples.min.js')
+    script.
+      $.material.init();
