assigning user.id to var from template as string to prevent rounding of steam_id

--- a/views/index.jade
+++ b/views/index.jade
@@ -28,12 +28,13 @@ block content
                 |#{user.displayName}
 
   #main
-
+  #user
   #inventory
 
   if user
     |Steam ID: #{user.id}
     script.
       if(user.id) {
-        var user_id = !{JSON.parse(user.id)}
+        var user_id = '#{user.id}';
+        console.log(user_id);
       }
