React animation moved to top level component RoundBox for transitionAppear

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -6094,3 +6094,10 @@ button {
     transform: translateY(1080px); }
   100% {
     transform: translateY(0px); } }
+
+.example-appear {
+  opacity: 0.01;
+  transition: opacity 1s ease-in; }
+
+.example-appear.example-appear-active {
+  opacity: 1; }
