--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html
     link(rel='stylesheet', href='/libraries/bootstrap-material-design/dist/css/ripples.css')
   body
     block content
+    script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js')
     script(type='text/javascript', src='/javascripts/build/app.js')
     script.
       $.material.init();
